# open_tab_tracker

./: README.md  deploy.py  open-tab-tracker.py  pyproject.toml  setup.py
docs/: build-and-release.md  build-and-release.sh build-and-release.md  debugging-crontabs.md  develop-build-and-release.md  release.md
open-tab-tracker/: __main__.py  browser.py  database.py  firefox.py  graphing.py
open_tab_tracker/: Database.py  Platform.py  __about__.py  __init__.py  __main__.py  daemon.py  database.py  filesystem.py  firefox.py  graphing.py  install.py
open_tab_tracker/browsers/: Browser.py  Chrome.py  Firefox.py  Safari.py  browser.py  chrome.py  firefox.py  safari.py
open_tab_tracker/system_jobs/: com.alichtman.open_tab_tracker.plist
tmp/: open_tab_tracker
