[tool.poetry]
name = "open-tab-tracker"
version = "0.1.0"
description = "Graphs how many open tabs you have in your browsers."
authors = ["Aaron Lichtman <aaronlichtman@gmail.com>"]
license = "MIT"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/alichtman/open_tab_tracker"
"Bug Tracker" = "https://github.com/alichtman/open_tab_tracker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
xdg-base-dirs = "^6.0.0"
loguru = "^0.7.0"
click = "^8.1.7"
seaborn = "^0.12.2"
plotly = "^5.16.1"
launchd = "^0.3.0"

[tool.poetry.group.dev.dependencies]
better-exceptions = "^0.3.3"
black = "^23.9.1"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
