[project]
dynamic = [ # Dynamic versioning with hatch: https://waylonwalker.com/hatch-version/
  "version"
]
name = "open-tab-tracker"


########
# Poetry
########

[tool.poetry]
name = "open-tab-tracker"
description = "Graphs how many open tabs you have in your browsers."
authors = ["Aaron Lichtman <aaronlichtman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "open_tab_tracker" },
]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
xdg-base-dirs = "^6.0.0"
loguru = "^0.7.0"
click = "^8.1.7"
seaborn = "^0.12.2"
plotly = "^5.16.1"
launchd = "^0.3.0"
rope = "^1.9.0"

[tool.poetry.group.dev.dependencies]
better-exceptions = "^0.3.3"
black = "^23.9.1"
hatchling = "^1.18.0"

[project.urls]
Homepage = "https://github.com/alichtman/open_tab_tracker"
"Bug Tracker" = "https://github.com/alichtman/open_tab_tracker/issues"

###########
# Hatchling
###########

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "open_tab_tracker/__version__.py"

[tool.hatch.build.targets.wheel]
include = ["open_tab_tracker/*.py"]
