[project]
name = "open-tab-tracker"
description = "Graphs how many open tabs you have in your browsers."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Aaron Lichtman", email = "aaronlichtman@gmail.com" }]
keywords = ["tab", "tracking", "firefox", "chrome", "browser"]
dependencies = [
	"pandas",
	"xdg-base-dirs",
	"loguru",
	"click",
	"plotly",
	"launchd",
	"rich",
	"python-crontab",
	"lz4",
	"jq",
	# DEV DEPS BELOW
	# I am having trouble getting hatch to cooperate with building a strictly dev env,
	# so we're throwing them in with the critical deps. Sorry.
	"rope",
	"better-exceptions",
	"black",
]

[project.urls]
"Source Code" = "https://github.com/alichtman/open_tab_tracker"
"Issue Tracker" = "https://github.com/alichtman/open_tab_tracker/issues"

[tool.hatch.version]
path = "open_tab_tracker/__about__.py"

[project.scripts]
open-tab-tracker = "open_tab_tracker:run"
ott = "open_tab_tracker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["open_tab_tracker/*"]
artifacts = ["dist/*"]
